fix the datepicker width on mobile screen

--- a/src/pages/components/datePicker/date-picker.css
+++ b/src/pages/components/datePicker/date-picker.css
@@ -1,7 +1,8 @@
 .date-picker {
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+    width: 300px;
+    max-width: 100%;
     margin-bottom: 30px;
 }
 
